--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PH'
 - !lcsh 'Finnish drama'
+- GITenberg
 title: 'Anna Hallman: 3-näytöksinen perhekuvaus'
 url: http://www.gutenberg.org/ebooks/42814
